tests/expr/left_shift_negative_value/stderr.golden
error: negative value of left shift -1
bus.fbd +2:26
   |
 2 |   c config; width = 1 << -1
   |                          ^^
